style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --header-bg-color: black;
  --main-bg-color: rgb(4, 51, 255);
  --primary-text-color: white;
  --the-issue-text-color: rgb(0, 253, 255);
  --the-solution-bg-color: yellow;
  --purple-bg: #963484;
}

/*html*/
html {
  scroll-behavior: smooth;
}

/*Body: */
body {
  position: relative;
}

/* Header Styling: */

header {
  position: relative;
  width: 100%;
  height: 95vh;
  background-color: var(--header-bg-color);
  color: white;
  font-family: monospace, sans-serif;
}

header nav .eye {
  margin-top: 32px;
  margin-left: 32px;
  font-size: 42px;
}

header .main-heading {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 42px;
  text-transform: uppercase;
}

header .scroll-down {
  position: absolute;
  bottom: 2%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 22px;
}

header .scroll-down p a {
  color: var(--primary-text-color);
}

/*Main Styling: */
main article.the-issue {
  position: relative;
  width: 100%;
  height: 100vh;
  font-family: monospace, sans-serif;
  background-color: var(--main-bg-color);
  color: var(--the-issue-text-color);
}

main article.the-issue .content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  min-width: 95%;
  margin-left: 22px;
}

main article.the-issue .content h2 {
  font-size: 32px;
  margin-bottom: 22px;
}

main article.the-issue .content p {
  font-size: 28px;
  color: var(--primary-text-color);
  max-width: 90%;
}

main article.the-solution {
  position: relative;
  width: 100%;
  height: 105vh;
  font-family: monospace, sans-serif;
  background-color: var(--purple-bg);
}

main article.the-solution .content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  min-width: 95%;
}

main article.the-solution .content h2 {
  color: var(--header-bg-color);
  font-size: 32px;
  margin: 22px 32px;
  color: pink;
}

main article.the-solution .content p {
  color: var(--header-bg-color);
  font-size: 28px;
  margin: 22px 32px;
  color: var(--primary-text-color);
}

main .scroll-down-issue {
  position: absolute;
  bottom: 2%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 22px;
}

/*footer design: */
footer {
  bottom: 0;
  background-color: var(--header-bg-color);
  width: 100%;
  height: 15vh;
}

.social-media-icons {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  height: 15vh;
}

footer .insta {
  font-size: 42px;
}

